fix project section layout issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -131,3 +131,7 @@ html {
         width: 95% !important;
     }
 }
+.ant-layout {
+ 
+    background: transparent !important;
+}
